--- a/007.html
+++ b/007.html
@@ -75,17 +75,18 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4200002025010602317</div></li>
+                    <div class="detail-value " id="reqNo">A4300002025020702317</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">湖北省，重庆市</div></li>
+				<div class="detail-value " id="passDists">湖南省，湖北省，河南省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2025年01月08日19时37分至 2025年01月15日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2025年02月10日19时20分至 2025年02月17日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">湖北省</span>:杨家岭-荆当旅游公路-车马阵收费站-G50沪渝高速-鄂渝界；<br><hr>
-<span id="pro">重庆市</span>:渝鄂界-G50沪渝高速-大歇收费站<br><hr>
+<span id="pro">湖南省</span>:永安收费站--G6021杭长高速--G0401长沙绕城高速--G4京港澳高速--新开联络线--G0421许广高速--湘鄂界；<br><hr>
+<span id="pro">湖北省</span>:鄂湘界--G0421许广高速--鄂豫界；<br><hr>
+<span id="pro">河南省</span>:豫鄂界--G0421许广高速--S38新扬高速--S25安罗高速--五龙收费站<br><hr>
 </div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
@@ -99,11 +100,11 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">推土机1台</div></li>
+                    <div class="detail-value " id="cargoInfo">摊铺机1台</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">43.09吨</div></li>
+                    <div class="detail-value " id="cargoWeight">43.10吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
-                    <div class="detail-value " id="cargoOutline">12.00 × 3.75 ×3.60</div></li>
+                    <div class="detail-value " id="cargoOutline">13.00 × 3.70 ×3.60</div></li>
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车辆信息</li> <!-- 车辆信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车车号牌：</div>
@@ -123,7 +124,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货总重量：</div>
                     <div class="detail-value " id="totalWeight">60.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
-                    <div class="detail-value " id="totalOutline">20.00 × 3.75× 4.50</div></li>
+                    <div class="detail-value " id="totalOutline">22.00 × 3.70× 4.50</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">轴荷分布：</div>
                     <div class="detail-value " id="axlesLoad">10+20+30</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class=" detail-name-blod">车货总体轮廓图：</div>
@@ -135,8 +136,9 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
+湖南省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
 湖北省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-重庆市：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+河南省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
