--- a/a001.html
+++ b/a001.html
@@ -53,7 +53,7 @@
                 <li data-role="list-divider" class="category-title">基本信息</li> <!-- 基本信息 -->
                 <li>
                     <div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">B4200002024112700069</div>
+                    <div class="detail-value " id="reqNo">B4200002025021300069</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">有效范围：</div>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行日期：</div>
-                    <div class="detail-value " id="passDate">2024-11-27至2024-12-10</div>
+                    <div class="detail-value " id="passDate">2025-02-14至2025-02-20</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行次数：</div>
@@ -70,7 +70,7 @@
                 <li>
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>羽林汽车维修-S103-洪湖大道-洪湖收费站-S13武监高速-G0421许广高速-新沟收费站-S353-三圣石化加油站。(审 批 路 线 不 含 城 市 道 路 )</div>
+                        <br>荆州市江陵申达电气有限公司-荆监一级公路-楚江大道-G351-普济收费站-S53枣石高速-旧口收费站-G234-中国京油加油站。(审 批 路 线 不 含 城 市 道 路 )</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">承运单位：</div>
@@ -85,11 +85,11 @@
                 <li data-role="list-divider" class="category-title">货物信息</li> <!-- 货物信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">浮箱</div>
+                    <div class="detail-value " id="cargoInfo">变压器</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">42.00吨</div>
+                    <div class="detail-value " id="cargoWeight">43.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -125,7 +125,7 @@
                 <li data-role="list-divider" class="category-title">车货总体信息</li> <!-- 车货总体信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">车货总重量：</div>
-                    <div class="detail-value " id="totalWeight">59.00吨</div>
+                    <div class="detail-value " id="totalWeight">60.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
