--- a/021.html
+++ b/021.html
@@ -75,17 +75,17 @@
                 </li>
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">基本信息</li>  <!-- 基本信息 -->              
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">A4200002024122003562</div></li>
+                    <div class="detail-value " id="reqNo">A4500002025022300562</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">湖北省，重庆市</div></li>
+				<div class="detail-value " id="passDists">广西壮族自治区，贵州省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
-                    <div class="detail-value " id="passDate">2024年12月23日20时26分至 2024年12月31日23时59分</div></li>
+                    <div class="detail-value " id="passDate">2025年02月24日20时06分至 2025年03月10日23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
 				<div class="detail-value " id="roads"><br>
-<span id="pro">湖北省</span>:武汉体育舞蹈艺术学校--谌家矶大道-青龙收费站-G4221沪武高速-S40武汉四环线高速-S15汉蔡高速-G50沪渝高速-G5012恩广高速--鄂渝界；<br><hr>
-<span id="pro">重庆市</span>:渝鄂界--G5012恩广高速-长岭互通-G69银百高速-五桥互通--五桥收费站生农业<br><hr></div></li>
+<span id="pro">广西壮族自治区</span>:兴业县银基混凝土有限公司--G324-玉林西收费站--S1701玉林绕城高速（玉林东方向）-G59呼北高速--G65包茂高速-G76厦蓉高速---桂黔界；<br><hr>
+<span id="pro">贵州省</span>:黔桂界--G76厦蓉高速-S15松从高速--从江东收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">邢台程玖汽车贸易有限公司</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
@@ -98,11 +98,11 @@
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">桥梁承板（一个）</div></li>
+                    <div class="detail-value " id="cargoInfo">挖机1台</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物重量：</div>
                     <div class="detail-value " id="cargoWeight">43.30吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
-                    <div class="detail-value " id="cargoOutline">12.00 × 3.50 ×3.00</div></li>
+                    <div class="detail-value " id="cargoOutline">15.00 × 3.60 ×3.60</div></li>
                     
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车辆信息</li> <!-- 车辆信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">牵引车车号牌：</div>
@@ -122,7 +122,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货总重量：</div>
                     <div class="detail-value " id="totalWeight">60.00吨</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
-                    <div class="detail-value " id="totalOutline">22.00 × 3.50× 4.50</div></li>
+                    <div class="detail-value " id="totalOutline">24.00 × 3.60× 4.50</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">轴荷分布：</div>
                     <div class="detail-value " id="axlesLoad">10+20+30</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class=" detail-name-blod">车货总体轮廓图：</div>
@@ -134,8 +134,8 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">其他信息</li> <!-- 其他信息 -->
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行意见：</div>
 				<div class="detail-value " id="passOpinion"><br>
-湖北省：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
-重庆市：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
+广西壮族自治区：<br>交通部门意见:同意通行！ <br>公安部门意见:暂无！<br><hr>
+贵州省：<br>交通部门意见:同意通行！<br>公安部门意见:暂无！<br><hr></div></li>                
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name-blod">护送方案：</div>
                     <div class="detail-image detail-value" id="planfile">无</div></li> 
                 <li class="ui-li-static ui-body-inherit ui-last-child"><div class="detail-name-blod">运输计划：</div>
